implementacion DTOs para ranking
se reemplazo el uso de Object[] por DTOs especificos para todo lo relacionado a repositorio, servicio, controlador y test de ranking/historial.