@@ -1,7 +1,8 @@
 package com.tallerwebi.presentacion;
 
 import com.tallerwebi.dominio.ServicioRanking;
-import com.tallerwebi.dominio.Usuario;
+import com.tallerwebi.dominio.dto.RankingCuestionarioDTO;
+import com.tallerwebi.dominio.dto.RankingGeneralDTO;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.ModelMap;
@@ -9,6 +10,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.servlet.ModelAndView;
 
+import java.util.Collections;
 import java.util.List;
 
 @Controller
@@ -23,7 +25,7 @@ public class ControladorRanking {
 
     @RequestMapping("/ranking")
     public ModelAndView mostrarRankingGeneral() {
-        List<Object[]> ranking = servicioRanking.obtenerRankingGeneral();
+        List<RankingGeneralDTO> ranking = servicioRanking.obtenerRankingGeneral();
         ModelMap model = new ModelMap();
         model.addAttribute("rankingGeneral", ranking);
         return new ModelAndView("ranking", model);
@@ -34,27 +36,15 @@ public class ControladorRanking {
             @RequestParam(value = "nombreCuestionario", required = false) String nombreCuestionario,
             @RequestParam(value = "idCuestionario", required = false) Long idCuestionario) {
 
-        List<Object[]> ranking;
-//        List<HistorialCuestionario> ranking;
+        List<RankingCuestionarioDTO> ranking;
 
         if (nombreCuestionario != null) {
             ranking = servicioRanking.obtenerRankingCuestionarioPorNombre(nombreCuestionario);
         } else if (idCuestionario != null) {
             ranking = servicioRanking.obtenerRankingCuestionarioPorId(idCuestionario);
         } else {
-            ranking = List.of();
+            ranking = Collections.emptyList();
         }
-
-//        if (idCuestionario != null) {
-//            ranking = servicioRanking.obtenerRankingCuestionarioPorId(idCuestionario);
-//            if (!ranking.isEmpty()) {
-//                nombreCuestionario = ranking.get(0).getNombreCuestionario();
-//            }
-//        } else if (nombreCuestionario != null) {
-//            ranking = servicioRanking.obtenerRankingCuestionarioPorNombre(nombreCuestionario);
-//        } else {
-//            ranking = List.of();
-//        }
 
         ModelMap model = new ModelMap();
         model.addAttribute("rankingCuestionario", ranking);
